Update Philosophy in about.html

--- a/about.html
+++ b/about.html
@@ -31,6 +31,8 @@
   <h2>MEMBERSHIP</h2>
 
   <h2>PHILOSOPHY</h2>
+  <p>We’re a community-first group. You don’t have to be an engineer to code, and you <br>
+  don’t have to be super smart! Everyone can build! We’re just here to help you make it real.</p>
 
   <h2>EVENTS</h2>
 
